[tool.poetry]
packages = [{include = "modern-city-poster"}]
name = "modern-city-poster"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
osmnx = "^1.9.1"
pdf2image = "^1.17.0"
pillow = "^10.2.0"
reportlab = "^4.1.0"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
